@@ -1,4 +1,6 @@
 master
+- noface
+  Add new option 'Indicate Quotes of You'.
 
 2.38.5
 - Mayhem
